<resources>
    <string name="app_name">SOS</string>

    <string name="title_activity_maps">SOS</string>
    <string name="pedirServicio">Pedir</string>
    <string name="ubicacion">Ubicación actual</string>
    <string name="cambiar">Cambiar</string>

    <string name="login_email">Correo electrónico</string>
    <string name="login_password">Contraseña</string>
    <string name="login_login">Iniciar sesión</string>
    <string name="login_register">Registrarse</string>

    <string name="register_email">Correo electrónico</string>
    <string name="register_password">Contraseña</string>
    <string name="register_repeat_password">Confirmar contraseña</string>
    <string name="register_register">Registrarse</string>

    <string name="register_first_name">Nombre(s)</string>
    <string name="register_last_name">Apellido(s)</string>
    <string name="birth_date">Fecha de nacimiento (DD/MM/YYYY)</string>
    <string name="register_height">Altura (cm.)</string>
    <string name="register_weight">Peso (kg.)</string>
    <string name="register_allergies">Alergias</string>
    <string name="register_blood_group">Grupo sanguíneo</string>
    <string name="register_emergency_contacts">Contactos de emergencia</string>
    <string name="informacion_medica">INFORMACIÓN MÉDICA PERSONAL</string>
    <string name="informacion_general">INFORMACIÓN DE USUARIO</string>
    <string name="datos_confidenciales">Tus datos seran manejados de manera confidencial con las entidades de salud y emergencias.</string>
    <string name="error_location_provider">Fallo al obtener la ubicación actual</string>

    <string name="pedir_ambulancia">Pedir ambulancia</string>
    <string name="pedir_policia">Pedir policia</string>
    <string name="pedir_bomberos">Pedir bomberos</string>
    <string name="choose_service_type">Elige el servicio que deseas solicitar</string>
    <string name="request_comments">Descripción (Opcional)</string>
    <string name="sameAsCurrentUser">Usuario actual es el que solicita el servicio</string>
    <string name="confirmar">Confirmar</string>
    <string name="request_confirmation">El servicio de emergencia sera dirigido a tu ubicación lo antes posible.</string>
    <string name="request_save_error">Hubo un problema al enviar la solicitud. Intenta de nuevo</string>
    <string name="loading">Cargando</string>
    <string name="invalid_email_address">El correo electrónico es invalido.</string>

    <string-array name="grupos_sanguineos">
        <item>Sin definir</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>


    <string name="call_contacts"> Llamar a contactos </string>
    <string name="send_sms"> Enviar SMS </string>
    <string name="notifications"> Notificaciones </string>

    <string-array name="tipos_de_servicio">
        <item>Ambulancia</item>
        <item>Policia</item>
        <item>Bomberos</item>
    </string-array>

</resources>
